// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBar Hide FilterBar 1`] = `
<div
  class="FilterBar-outerContainer-0"
>
  <div
    class="FilterBar-filterBarHeader-0"
  >
    <div
      class="FilterBar-headerRowRight-0"
    >
      <ui5-button
        class="FilterBar-showFiltersBtn-0"
        design="Transparent"
      >
        Show Filter Bar
      </ui5-button>
    </div>
  </div>
  <div
    class="FilterBar-filterArea-0 FilterBar-filterAreaClosed-0"
  >
    <div
      class="FilterGroupItem-filterItem-0"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="Classification"
          >
            
          Classification
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-select>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterBar Render without crashing - default props 1`] = `
<div
  class="FilterBar-outerContainer-0"
>
  <div
    class="FilterBar-filterBarHeader-0"
  >
    <div
      class="FilterBar-headerRowRight-0"
    >
      <ui5-button
        class="FilterBar-showFiltersBtn-0"
        design="Transparent"
      >
        Hide Filter Bar
      </ui5-button>
    </div>
  </div>
  <div
    class="FilterBar-filterArea-0 FilterBar-filterAreaOpen-0"
  >
    <div
      class="FilterGroupItem-filterItem-0"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="Classification"
          >
            
          Classification
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-select>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterBar Render without crashing - w/ filter dialog 1`] = `
<div
  class="FilterBar-outerContainer-0"
>
  <div
    class="FilterBar-filterBarHeader-0"
  >
    <div
      style="display: inline-block; pointer-events: auto;"
    >
      <div
        class="VariantManagement-VariantManagement-0"
      >
        <ui5-title
          class="VariantManagement-VariantManagementText-0"
          level="H4"
        >
          Variant 1
        </ui5-title>
        <ui5-button
          design="Transparent"
          icon="navigation-down-arrow"
        />
      </div>
    </div>
    <ui5-popover
      header-text="Variants"
      horizontal-align="Center"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-button
        class="VariantManagement-footer-0"
        design="Emphasized"
        slot="footer"
      >
        Cancel
      </ui5-button>
      <ui5-list
        footer-text=""
        header-text=""
        mode="SingleSelect"
        no-data-text=""
        separators="All"
      >
        <ui5-li
          data-key="1"
          info-state="None"
          selected="true"
          style="width: 300px;"
          type="Active"
        >
          Variant 1
        </ui5-li>
        <ui5-li
          data-key="2"
          info-state="None"
          style="width: 300px;"
          type="Active"
        >
          Variant 2
        </ui5-li>
      </ui5-list>
    </ui5-popover>
    <div
      class="FilterBar-vLine-0"
    >
      <ui5-input
        placeholder="Search"
        type="Text"
        value=""
        value-state="None"
      />
    </div>
    <div
      class="FilterBar-headerRowRight-0"
    >
      <ui5-button
        design="Transparent"
      >
        Clear
      </ui5-button>
      <ui5-button
        design="Transparent"
      >
        Restore
      </ui5-button>
      <ui5-button
        class="FilterBar-showFiltersBtn-0"
        design="Transparent"
      >
        Hide Filter Bar
      </ui5-button>
      <ui5-button
        design="Default"
      >
        Filters (1337)
      </ui5-button>
      <ui5-button
        design="Emphasized"
      >
        Go
      </ui5-button>
    </div>
  </div>
  <div
    class="FilterBar-filterArea-0 FilterBar-filterAreaOpen-0"
  >
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="Input"
          >
            
          Input
          </ui5-label>
        </div>
        <ui5-input
          placeholder="Placeholder"
          type="Text"
          value=""
          value-state="None"
        />
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="Switch"
          >
            
          Switch
          </ui5-label>
        </div>
        <ui5-switch />
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="SELECT w/ initial selected"
          >
            
          SELECT w/ initial selected
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-select>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="SELECT w/o initial selected"
          >
            
          SELECT w/o initial selected
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option
            data-key="Test 1"
            icon="add"
            selected="true"
          >
            Test 1
          </ui5-option>
          <ui5-option
            data-key="Test 2"
            icon="add"
          >
            Test 2
          </ui5-option>
          <ui5-option
            data-key="Test 3"
            icon="add"
          >
            Test 3
          </ui5-option>
          <ui5-option
            data-key="Test 4"
            icon="add"
          >
            Test 4
          </ui5-option>
          <ui5-option
            data-key="Test 5"
            icon="add"
          >
            Test 5
          </ui5-option>
        </ui5-select>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="MultBox w/ initial selected"
          >
            Group 1: 
          MultBox w/ initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 4
          </ui5-option>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="MultBox w/o initial selected"
          >
            Group 2: 
          MultBox w/o initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-option>
            <span
              class="Text-text-0"
            >
              asd
            </span>
          </ui5-option>
          <ui5-option>
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="MultBox StandardListItem w/ initial selected"
          >
            Group 1: 
          MultBox StandardListItem w/ initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-li
            info-state="None"
            selected="true"
            type="Active"
          >
            Selection 1
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 2
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 3
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 4
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 5
          </ui5-li>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <span
            class="FilterGroupItem-mandatory-0"
          >
            *
          </span>
          <ui5-label
            for=""
            title="MultBox CustomListItem w/ initial selected"
          >
            Group 2: 
          MultBox CustomListItem w/ initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-li-custom
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
          <ui5-li-custom
            selected="true"
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
          <ui5-li-custom
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
          <ui5-li-custom
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <span
            class="FilterGroupItem-mandatory-0"
          >
            *
          </span>
          <ui5-label
            for=""
            title="Date Picker"
          >
            Group 2: 
          Date Picker
          </ui5-label>
        </div>
        <ui5-datepicker
          value-state="None"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterBar Toggle Filters Dialog 1`] = `
Array [
  <ui5-dialog
    header-text=""
    open="true"
    opened=""
  >
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 FilterBarDialog-header-0"
      slot="header"
    >
      <ui5-title
        level="H4"
      >
        Filters
      </ui5-title>
      <ui5-input
        placeholder="Search for Filters"
        type="Text"
        value=""
        value-state="None"
      >
        <ui5-icon
          name="search"
          slot="icon"
        />
      </ui5-input>
    </div>
    <div
      class="Bar-bar-0 Bar-footer-0"
      data-bar-part="Root"
      slot="footer"
    >
      <div
        class="Bar-left-0"
        data-bar-part="Left"
      />
      <div
        class="Bar-center-0"
        data-bar-part="Center"
      >
        <div
          class="Bar-inner-0"
        />
      </div>
      <div
        class="Bar-right-0"
        data-bar-part="Right"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentEnd-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 FilterBarDialog-footer-0"
        >
          <ui5-button
            design="Emphasized"
          >
            Go
          </ui5-button>
          <ui5-button
            design="Default"
          >
            Clear
          </ui5-button>
          <ui5-button
            design="Default"
          >
            Restore
          </ui5-button>
          <ui5-button
            design="Default"
          >
            Save
          </ui5-button>
          <ui5-button
            design="Transparent"
          >
            Cancel
          </ui5-button>
        </div>
      </div>
    </div>
    <div
      class="FilterBarDialog-dialog-0"
    >
      <div
        class="FilterBarDialog-fbSearch-0"
      >
        <span />
        <ui5-input
          placeholder="Search"
          type="Text"
          value=""
          value-state="None"
        />
      </div>
      <div
        class="FilterBarDialog-groupContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentSpaceBetween-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-title
            class="FilterBarDialog-groupTitle-0"
            level="H5"
          >
            Basic
          </ui5-title>
          <span
            class="Text-text-0 Text-noWrap-0"
          >
            Show on Filter Bar
          </span>
        </div>
        <div
          class="FilterBarDialog-filters-0"
        >
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="Input"
                  >
                    
          Input
                  </ui5-label>
                </div>
                <ui5-input
                  placeholder="Placeholder"
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="Switch"
                  >
                    
          Switch
                  </ui5-label>
                </div>
                <ui5-switch />
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="SELECT w/ initial selected"
                  >
                    
          SELECT w/ initial selected
                  </ui5-label>
                </div>
                <ui5-select
                  value-state="None"
                >
                  <ui5-option>
                    Option 1
                  </ui5-option>
                  <ui5-option
                    selected="true"
                  >
                    Option 2
                  </ui5-option>
                  <ui5-option>
                    Option 3
                  </ui5-option>
                  <ui5-option>
                    Option 4
                  </ui5-option>
                </ui5-select>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="SELECT w/o initial selected"
                  >
                    
          SELECT w/o initial selected
                  </ui5-label>
                </div>
                <ui5-select
                  value-state="None"
                >
                  <ui5-option
                    data-key="Test 1"
                    icon="add"
                    selected="true"
                  >
                    Test 1
                  </ui5-option>
                  <ui5-option
                    data-key="Test 2"
                    icon="add"
                  >
                    Test 2
                  </ui5-option>
                  <ui5-option
                    data-key="Test 3"
                    icon="add"
                  >
                    Test 3
                  </ui5-option>
                  <ui5-option
                    data-key="Test 4"
                    icon="add"
                  >
                    Test 4
                  </ui5-option>
                  <ui5-option
                    data-key="Test 5"
                    icon="add"
                  >
                    Test 5
                  </ui5-option>
                </ui5-select>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
        </div>
      </div>
      <div
        class="FilterBarDialog-groupContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentSpaceBetween-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-title
            class=""
            level="H5"
          >
            Group 1
          </ui5-title>
        </div>
        <div
          class="FilterBarDialog-filters-0"
        >
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="MultBox w/ initial selected"
                  >
                    
          MultBox w/ initial selected
                  </ui5-label>
                </div>
                <ui5-multi-combobox
                  placeholder=""
                  value=""
                  value-state="None"
                >
                  <ui5-option>
                    Option 1
                  </ui5-option>
                  <ui5-option
                    selected="true"
                  >
                    Option 2
                  </ui5-option>
                  <ui5-option>
                    Option 3
                  </ui5-option>
                  <ui5-option
                    selected="true"
                  >
                    Option 4
                  </ui5-option>
                </ui5-multi-combobox>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="MultBox StandardListItem w/ initial selected"
                  >
                    
          MultBox StandardListItem w/ initial selected
                  </ui5-label>
                </div>
                <ui5-multi-combobox
                  placeholder=""
                  value=""
                  value-state="None"
                >
                  <ui5-li
                    info-state="None"
                    selected="true"
                    type="Active"
                  >
                    Selection 1
                  </ui5-li>
                  <ui5-li
                    info-state="None"
                    type="Active"
                  >
                    Selection 2
                  </ui5-li>
                  <ui5-li
                    info-state="None"
                    type="Active"
                  >
                    Selection 3
                  </ui5-li>
                  <ui5-li
                    info-state="None"
                    type="Active"
                  >
                    Selection 4
                  </ui5-li>
                  <ui5-li
                    info-state="None"
                    type="Active"
                  >
                    Selection 5
                  </ui5-li>
                </ui5-multi-combobox>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
        </div>
      </div>
      <div
        class="FilterBarDialog-groupContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentSpaceBetween-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-title
            class=""
            level="H5"
          >
            Group 2
          </ui5-title>
        </div>
        <div
          class="FilterBarDialog-filters-0"
        >
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <ui5-label
                    for=""
                    title="MultBox w/o initial selected"
                  >
                    
          MultBox w/o initial selected
                  </ui5-label>
                </div>
                <ui5-multi-combobox
                  placeholder=""
                  value=""
                  value-state="None"
                >
                  <ui5-option>
                    <span
                      class="Text-text-0"
                    >
                      asd
                    </span>
                  </ui5-option>
                  <ui5-option>
                    Option 2
                  </ui5-option>
                  <ui5-option>
                    Option 3
                  </ui5-option>
                  <ui5-option>
                    Option 4
                  </ui5-option>
                </ui5-multi-combobox>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <span
                    class="FilterGroupItem-mandatory-0"
                  >
                    *
                  </span>
                  <ui5-label
                    for=""
                    title="MultBox CustomListItem w/ initial selected"
                  >
                    
          MultBox CustomListItem w/ initial selected
                  </ui5-label>
                </div>
                <ui5-multi-combobox
                  placeholder=""
                  value=""
                  value-state="None"
                >
                  <ui5-li-custom
                    type="Active"
                  >
                    Selection 1
                  </ui5-li-custom>
                  <ui5-li-custom
                    selected="true"
                    type="Active"
                  >
                    Selection 1
                  </ui5-li-custom>
                  <ui5-li-custom
                    type="Active"
                  >
                    Selection 1
                  </ui5-li-custom>
                  <ui5-li-custom
                    type="Active"
                  >
                    Selection 1
                  </ui5-li-custom>
                </ui5-multi-combobox>
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              disabled="true"
              value-state="None"
            />
          </div>
          <div
            class="FilterBarDialog-singleFilter-0"
          >
            <div
              class="FilterGroupItem-filterItemDialog-0"
            >
              <div
                class="FilterGroupItem-innerFilterItemContainerDialog-0"
              >
                <div
                  class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
                >
                  <span
                    class="FilterGroupItem-mandatory-0"
                  >
                    *
                  </span>
                  <ui5-label
                    for=""
                    title="Date Picker"
                  >
                    
          Date Picker
                  </ui5-label>
                </div>
                <ui5-datepicker
                  value-state="None"
                />
              </div>
            </div>
            <ui5-checkbox
              checked="true"
              disabled="true"
              value-state="None"
            />
          </div>
        </div>
      </div>
    </div>
  </ui5-dialog>,
  <div
    class="FilterBar-outerContainer-0"
  >
    <div
      class="FilterBar-filterBarHeader-0"
    >
      <div
        style="display: inline-block; pointer-events: auto;"
      >
        <div
          class="VariantManagement-VariantManagement-0"
        >
          <ui5-title
            class="VariantManagement-VariantManagementText-0"
            level="H4"
          >
            Variant 1
          </ui5-title>
          <ui5-button
            design="Transparent"
            icon="navigation-down-arrow"
          />
        </div>
      </div>
      <ui5-popover
        header-text="Variants"
        horizontal-align="Center"
        placement-type="Bottom"
        vertical-align="Center"
      >
        <ui5-button
          class="VariantManagement-footer-0"
          design="Emphasized"
          slot="footer"
        >
          Cancel
        </ui5-button>
        <ui5-list
          footer-text=""
          header-text=""
          mode="SingleSelect"
          no-data-text=""
          separators="All"
        >
          <ui5-li
            data-key="1"
            info-state="None"
            selected="true"
            style="width: 300px;"
            type="Active"
          >
            Variant 1
          </ui5-li>
          <ui5-li
            data-key="2"
            info-state="None"
            style="width: 300px;"
            type="Active"
          >
            Variant 2
          </ui5-li>
        </ui5-list>
      </ui5-popover>
      <div
        class="FilterBar-vLine-0"
      >
        <ui5-input
          placeholder="Search"
          type="Text"
          value=""
          value-state="None"
        />
      </div>
      <div
        class="FilterBar-headerRowRight-0"
      >
        <ui5-button
          design="Transparent"
        >
          Clear
        </ui5-button>
        <ui5-button
          design="Transparent"
        >
          Restore
        </ui5-button>
        <ui5-button
          class="FilterBar-showFiltersBtn-0"
          design="Transparent"
        >
          Hide Filter Bar
        </ui5-button>
        <ui5-button
          design="Default"
        >
          Filters (1337)
        </ui5-button>
        <ui5-button
          design="Emphasized"
        >
          Go
        </ui5-button>
      </div>
    </div>
    <div
      class="FilterBar-filterArea-0 FilterBar-filterAreaOpen-0"
    >
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="Input"
            >
              
          Input
            </ui5-label>
          </div>
          <ui5-input
            placeholder="Placeholder"
            type="Text"
            value=""
            value-state="None"
          />
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="Switch"
            >
              
          Switch
            </ui5-label>
          </div>
          <ui5-switch />
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="SELECT w/ initial selected"
            >
              
          SELECT w/ initial selected
            </ui5-label>
          </div>
          <ui5-select
            value-state="None"
          >
            <ui5-option>
              Option 1
            </ui5-option>
            <ui5-option
              selected="true"
            >
              Option 2
            </ui5-option>
            <ui5-option>
              Option 3
            </ui5-option>
            <ui5-option>
              Option 4
            </ui5-option>
          </ui5-select>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="SELECT w/o initial selected"
            >
              
          SELECT w/o initial selected
            </ui5-label>
          </div>
          <ui5-select
            value-state="None"
          >
            <ui5-option
              data-key="Test 1"
              icon="add"
              selected="true"
            >
              Test 1
            </ui5-option>
            <ui5-option
              data-key="Test 2"
              icon="add"
            >
              Test 2
            </ui5-option>
            <ui5-option
              data-key="Test 3"
              icon="add"
            >
              Test 3
            </ui5-option>
            <ui5-option
              data-key="Test 4"
              icon="add"
            >
              Test 4
            </ui5-option>
            <ui5-option
              data-key="Test 5"
              icon="add"
            >
              Test 5
            </ui5-option>
          </ui5-select>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="MultBox w/ initial selected"
            >
              Group 1: 
          MultBox w/ initial selected
            </ui5-label>
          </div>
          <ui5-multi-combobox
            placeholder=""
            value=""
            value-state="None"
          >
            <ui5-option>
              Option 1
            </ui5-option>
            <ui5-option
              selected="true"
            >
              Option 2
            </ui5-option>
            <ui5-option>
              Option 3
            </ui5-option>
            <ui5-option
              selected="true"
            >
              Option 4
            </ui5-option>
          </ui5-multi-combobox>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="MultBox w/o initial selected"
            >
              Group 2: 
          MultBox w/o initial selected
            </ui5-label>
          </div>
          <ui5-multi-combobox
            placeholder=""
            value=""
            value-state="None"
          >
            <ui5-option>
              <span
                class="Text-text-0"
              >
                asd
              </span>
            </ui5-option>
            <ui5-option>
              Option 2
            </ui5-option>
            <ui5-option>
              Option 3
            </ui5-option>
            <ui5-option>
              Option 4
            </ui5-option>
          </ui5-multi-combobox>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <ui5-label
              for=""
              title="MultBox StandardListItem w/ initial selected"
            >
              Group 1: 
          MultBox StandardListItem w/ initial selected
            </ui5-label>
          </div>
          <ui5-multi-combobox
            placeholder=""
            value=""
            value-state="None"
          >
            <ui5-li
              info-state="None"
              selected="true"
              type="Active"
            >
              Selection 1
            </ui5-li>
            <ui5-li
              info-state="None"
              type="Active"
            >
              Selection 2
            </ui5-li>
            <ui5-li
              info-state="None"
              type="Active"
            >
              Selection 3
            </ui5-li>
            <ui5-li
              info-state="None"
              type="Active"
            >
              Selection 4
            </ui5-li>
            <ui5-li
              info-state="None"
              type="Active"
            >
              Selection 5
            </ui5-li>
          </ui5-multi-combobox>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <span
              class="FilterGroupItem-mandatory-0"
            >
              *
            </span>
            <ui5-label
              for=""
              title="MultBox CustomListItem w/ initial selected"
            >
              Group 2: 
          MultBox CustomListItem w/ initial selected
            </ui5-label>
          </div>
          <ui5-multi-combobox
            placeholder=""
            value=""
            value-state="None"
          >
            <ui5-li-custom
              type="Active"
            >
              Selection 1
            </ui5-li-custom>
            <ui5-li-custom
              selected="true"
              type="Active"
            >
              Selection 1
            </ui5-li-custom>
            <ui5-li-custom
              type="Active"
            >
              Selection 1
            </ui5-li-custom>
            <ui5-li-custom
              type="Active"
            >
              Selection 1
            </ui5-li-custom>
          </ui5-multi-combobox>
        </div>
      </div>
      <div
        class="FilterGroupItem-filterItem-0"
        style="width: 12rem;"
      >
        <div
          class="FilterGroupItem-innerFilterItemContainer-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <span
              class="FilterGroupItem-mandatory-0"
            >
              *
            </span>
            <ui5-label
              for=""
              title="Date Picker"
            >
              Group 2: 
          Date Picker
            </ui5-label>
          </div>
          <ui5-datepicker
            value-state="None"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FilterBar Toggle Filters Dialog 2`] = `
<div
  class="FilterBar-outerContainer-0"
>
  <div
    class="FilterBar-filterBarHeader-0"
  >
    <div
      style="display: inline-block; pointer-events: auto;"
    >
      <div
        class="VariantManagement-VariantManagement-0"
      >
        <ui5-title
          class="VariantManagement-VariantManagementText-0"
          level="H4"
        >
          Variant 1
        </ui5-title>
        <ui5-button
          design="Transparent"
          icon="navigation-down-arrow"
        />
      </div>
    </div>
    <ui5-popover
      header-text="Variants"
      horizontal-align="Center"
      placement-type="Bottom"
      vertical-align="Center"
    >
      <ui5-button
        class="VariantManagement-footer-0"
        design="Emphasized"
        slot="footer"
      >
        Cancel
      </ui5-button>
      <ui5-list
        footer-text=""
        header-text=""
        mode="SingleSelect"
        no-data-text=""
        separators="All"
      >
        <ui5-li
          data-key="1"
          info-state="None"
          selected="true"
          style="width: 300px;"
          type="Active"
        >
          Variant 1
        </ui5-li>
        <ui5-li
          data-key="2"
          info-state="None"
          style="width: 300px;"
          type="Active"
        >
          Variant 2
        </ui5-li>
      </ui5-list>
    </ui5-popover>
    <div
      class="FilterBar-vLine-0"
    >
      <ui5-input
        placeholder="Search"
        type="Text"
        value=""
        value-state="None"
      />
    </div>
    <div
      class="FilterBar-headerRowRight-0"
    >
      <ui5-button
        design="Transparent"
      >
        Clear
      </ui5-button>
      <ui5-button
        design="Transparent"
      >
        Restore
      </ui5-button>
      <ui5-button
        class="FilterBar-showFiltersBtn-0"
        design="Transparent"
      >
        Hide Filter Bar
      </ui5-button>
      <ui5-button
        design="Default"
      >
        Filters (1337)
      </ui5-button>
      <ui5-button
        design="Emphasized"
      >
        Go
      </ui5-button>
    </div>
  </div>
  <div
    class="FilterBar-filterArea-0 FilterBar-filterAreaOpen-0"
  >
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="Input"
          >
            
          Input
          </ui5-label>
        </div>
        <ui5-input
          placeholder="Placeholder"
          type="Text"
          value=""
          value-state="None"
        />
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="Switch"
          >
            
          Switch
          </ui5-label>
        </div>
        <ui5-switch />
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="SELECT w/ initial selected"
          >
            
          SELECT w/ initial selected
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-select>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="SELECT w/o initial selected"
          >
            
          SELECT w/o initial selected
          </ui5-label>
        </div>
        <ui5-select
          value-state="None"
        >
          <ui5-option
            data-key="Test 1"
            icon="add"
            selected="true"
          >
            Test 1
          </ui5-option>
          <ui5-option
            data-key="Test 2"
            icon="add"
          >
            Test 2
          </ui5-option>
          <ui5-option
            data-key="Test 3"
            icon="add"
          >
            Test 3
          </ui5-option>
          <ui5-option
            data-key="Test 4"
            icon="add"
          >
            Test 4
          </ui5-option>
          <ui5-option
            data-key="Test 5"
            icon="add"
          >
            Test 5
          </ui5-option>
        </ui5-select>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="MultBox w/ initial selected"
          >
            Group 1: 
          MultBox w/ initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-option>
            Option 1
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option
            selected="true"
          >
            Option 4
          </ui5-option>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="MultBox w/o initial selected"
          >
            Group 2: 
          MultBox w/o initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-option>
            <span
              class="Text-text-0"
            >
              asd
            </span>
          </ui5-option>
          <ui5-option>
            Option 2
          </ui5-option>
          <ui5-option>
            Option 3
          </ui5-option>
          <ui5-option>
            Option 4
          </ui5-option>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <ui5-label
            for=""
            title="MultBox StandardListItem w/ initial selected"
          >
            Group 1: 
          MultBox StandardListItem w/ initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-li
            info-state="None"
            selected="true"
            type="Active"
          >
            Selection 1
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 2
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 3
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 4
          </ui5-li>
          <ui5-li
            info-state="None"
            type="Active"
          >
            Selection 5
          </ui5-li>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <span
            class="FilterGroupItem-mandatory-0"
          >
            *
          </span>
          <ui5-label
            for=""
            title="MultBox CustomListItem w/ initial selected"
          >
            Group 2: 
          MultBox CustomListItem w/ initial selected
          </ui5-label>
        </div>
        <ui5-multi-combobox
          placeholder=""
          value=""
          value-state="None"
        >
          <ui5-li-custom
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
          <ui5-li-custom
            selected="true"
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
          <ui5-li-custom
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
          <ui5-li-custom
            type="Active"
          >
            Selection 1
          </ui5-li-custom>
        </ui5-multi-combobox>
      </div>
    </div>
    <div
      class="FilterGroupItem-filterItem-0"
      style="width: 12rem;"
    >
      <div
        class="FilterGroupItem-innerFilterItemContainer-0"
      >
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
        >
          <span
            class="FilterGroupItem-mandatory-0"
          >
            *
          </span>
          <ui5-label
            for=""
            title="Date Picker"
          >
            Group 2: 
          Date Picker
          </ui5-label>
        </div>
        <ui5-datepicker
          value-state="None"
        />
      </div>
    </div>
  </div>
</div>
`;
